--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codeforgood",
+  "name": "DevJam",
   "version": "0.1.0",
   "homepage": "https://codeforgood.getsocialnow.social/",
   "private": true,
