--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devjam",
   "version": "0.1.0",
-  "homepage": "https://devjam.getsocialnow.social//",
+  "homepage": "https://devjam.getsocialnow.social/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
